Fix instagram on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+* {
+  user-select: none;
+}
+
 @theme {
   --default-font-family: var(--font-sans), sans-serif;
 }
